Init a panamagl canvas and tutorials